# fleetbench

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  benchmarking.md  development.md  output-schema.md  release.md
examples/: minimal_benchmark.py  progress_stream.py
scripts/: profile_methods.py  run_publication_study.py  run_sensitivity_study.py  update_profile_baseline.py
src/ev_fleet_benchmark/: __init__.py  __main__.py  benchmark.py  cli.py  economics.py  exceptions.py  model.py  reporting.py  reporting_aggregation.py  reporting_common.py  reporting_markdown.py  reporting_plots.py  reporting_publication.py  reporting_sensitivity.py  reporting_stats.py  scenario_tree.py  scenarios.py  simulator.py  telemetry.py  validation.py
src/ev_fleet_benchmark/methods/: __init__.py  base.py  config.py  greedy.py  naive.py  optimization.py  rolling_horizon.py  scenario_tree.py  stochastic.py
tests/: test_baseline_update.py  test_benchmark.py  test_cli.py  test_edge_cases.py  test_methods.py  test_package_metadata.py  test_production_features.py  test_profiling.py  test_reporting.py  test_scenario_tree.py  test_scenarios.py  test_telemetry.py  test_validation.py
