[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-fleet-benchmark"
version = "0.1.0"
description = "Benchmark suite for reproducible EV fleet charging simulation, optimization, and analysis workflows"
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["electric-vehicle", "fleet-charging", "simulation", "benchmarking", "operations-research", "ortools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Office/Business :: Scheduling",
  "Typing :: Typed",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Malek Benmarzouk" }
]
maintainers = [
  { name = "Malek Benmarzouk" }
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "ortools>=9.10",
  "pandas>=2.2",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19",
  "pandas-stubs>=3.0.0.260204",
  "pytest>=8.2",
  "pytest-cov>=6.0",
  "ruff>=0.15"
]
release = [
  "build>=1.2",
  "twine>=6.1"
]

[project.scripts]
fleetbench = "ev_fleet_benchmark.cli:app"

[project.urls]
Homepage = "https://github.com/MalekBENMARZOUK/FleetBench"
Repository = "https://github.com/MalekBENMARZOUK/FleetBench.git"
Issues = "https://github.com/MalekBENMARZOUK/FleetBench/issues"
Documentation = "https://github.com/MalekBENMARZOUK/FleetBench#readme"
Changelog = "https://github.com/MalekBENMARZOUK/FleetBench/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ev_fleet_benchmark = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "W",      # pycodestyle warnings
  "I",      # isort
  "N",      # pep8-naming
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  "C4",     # flake8-comprehensions
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "RUF",    # Ruff-specific rules
  "PT",     # flake8-pytest-style
  "S",      # flake8-bandit (security)
  "LOG",    # flake8-logging
  "T20",    # flake8-print
]
ignore = [
  "S101",   # assert used (fine in tests)
  "T201",   # print used (fine in scripts)
  "S311",   # pseudo-random (acceptable for simulation seeds)
  "UP007",  # X | Y union syntax (keep for 3.11 compat readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/*" = ["T201"]
"src/ev_fleet_benchmark/cli.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["ev_fleet_benchmark"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = ["src", "tests", "scripts", "examples"]
strict = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["ortools", "ortools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests that require external dependencies",
]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["ev_fleet_benchmark"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@abstractmethod",
]
